@@ -86,6 +86,11 @@ class Lead < ActiveRecord::Base
   end
 
   #----------------------------------------------------------------------------
+  def reject
+    update_attribute(:status, "rejected")
+  end
+
+  #----------------------------------------------------------------------------
   def full_name
     "#{self.first_name} #{self.last_name}"
   end
