@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Wed, May 13, 2009
 ---------------------------------------------------------------------
 - Implemented search for campaigns, opportunities, accounts, and contacts.
+- Made it easier to reject leads (LH #35).
 
 Tue, May 12, 2009
 ---------------------------------------------------------------------
